# SHITTYSYNC

./: Cargo.toml  README.md  example-config.toml
src/: cli.rs  commands.rs  config.rs  error.rs  evermusic.rs  m3u.rs  main.rs  rsync.rs  transcode.rs  watch.rs
