[package]
name = "shittysync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swinsiandb = {path = "../swinsiandb"}
bluos-api-rs = {path = "../bluos-api-rs"}
tokio = { version = "1.16.1", features = ["full"] }
clap = { version = "3.0.13", features = ["derive"] }
anyhow = "1.0.53"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"
thiserror = "1.0.30"
reqwest = "0.11.9"
filenamify = "0.1.0"
zeroconf = "0.10.2"
log = "0.4.14"
pretty_env_logger = "0.4.0"
libmtp-rs = {git = "https://github.com/coral/libmtp-rs.git"}
rayon = "1.6.1"
pathdiff = "0.2.1"
highway = "0.8.1"
sha3 = "0.10.6"
hex-literal = "0.3.4"
