[package]
name = "shittysync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swinsiandb = { git = "https://github.com/coral/swinsian-db-rust.git" }
bluos-api-rs = "1.1.2"
libmtp-rs = { git = "https://github.com/coral/libmtp-rs.git" }
tokio = { version = "1.52", features = ["full"] }
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
filenamify = "0.1"
zeroconf = "0.18"
log = "0.4"
pretty_env_logger = "0.5"
rayon = "1.12"
pathdiff = "0.2"
sha3 = "0.12"
glob = "0.3"

# Use the local checkout of swinsiandb during development (e.g. folder-path
# support). Remove once those changes are pushed to the git remote.
[patch."https://github.com/coral/swinsian-db-rust.git"]
swinsiandb = { path = "../swinsian-db-rust" }
